Add Verhuur and Prijzen as top-level nav items
- Move Prijzen out of 'Over Ons' dropdown to main nav
- Add Verhuur (Rental) link to main nav pointing to mobiele-vloer
- Updated all 16 partials (NL and EN versions)
- Removed Prijzen from dropdown menu in all pages

--- a/partials/index-en.html
+++ b/partials/index-en.html
@@ -28,9 +28,14 @@
                 <button class="nav-link">About Us</button>
                 <div class="dropdown-menu">
                     <a href="over-ons.html">About Inter Active Move</a>
-                    <a href="prijzen.html">Prices</a>
                     <a href="#contact">Contact</a>
                 </div>
+            </li>
+            <li class="nav-item">
+                <a href="products/mobiele-vloer.html" class="nav-link">Rental</a>
+            </li>
+            <li class="nav-item">
+                <a href="prijzen.html" class="nav-link">Prices</a>
             </li>
         </ul>
 
@@ -69,7 +74,6 @@
     <a href="onderwijs.html">Education</a>
     <a href="zorg-revalidatie.html">Care & Rehabilitation</a>
     <a href="over-ons.html">About Us</a>
-    <a href="prijzen.html">Prices</a>
     <a href="#contact" onclick="closeMobileNav()">Contact</a>
 </div>
 
