--- a/partials/index-nl.html
+++ b/partials/index-nl.html
@@ -28,9 +28,14 @@
                 <button class="nav-link">Over Ons</button>
                 <div class="dropdown-menu">
                     <a href="over-ons.html">Over Inter Active Move</a>
-                    <a href="prijzen.html">Prijzen</a>
                     <a href="#contact">Contact</a>
                 </div>
+            </li>
+            <li class="nav-item">
+                <a href="products/mobiele-vloer.html" class="nav-link">Verhuur</a>
+            </li>
+            <li class="nav-item">
+                <a href="prijzen.html" class="nav-link">Prijzen</a>
             </li>
         </ul>
 
@@ -69,7 +74,6 @@
     <a href="onderwijs.html">Onderwijs</a>
     <a href="zorg-revalidatie.html">Zorg & Revalidatie</a>
     <a href="over-ons.html">Over Ons</a>
-    <a href="prijzen.html">Prijzen</a>
     <a href="#contact" onclick="closeMobileNav()">Contact</a>
 </div>
 
