--- a/partials/onderwijs-en.html
+++ b/partials/onderwijs-en.html
@@ -31,6 +31,12 @@
                     <a href="index.html#contact">Contact</a>
                 </div>
             </li>
+                    <li class="nav-item">
+                <a href="products/mobiele-vloer.html" class="nav-link">Rental</a>
+            </li>
+            <li class="nav-item">
+                <a href="prijzen.html" class="nav-link">Prices</a>
+            </li>
         </ul>
 
         <div class="lang-toggle">
