--- a/partials/over-ons-en.html
+++ b/partials/over-ons-en.html
@@ -27,11 +27,16 @@
                     <button class="nav-link">About Us</button>
                     <div class="dropdown-menu">
                         <a href="over-ons.html">About InterActiveMove</a>
-                        <a href="prijzen.html">Prices</a>
                         <a href="index.html#contact">Contact</a>
                     </div>
                 </li>
-            </ul>
+                        <li class="nav-item">
+                <a href="products/mobiele-vloer.html" class="nav-link">Rental</a>
+            </li>
+            <li class="nav-item">
+                <a href="prijzen.html" class="nav-link">Prices</a>
+            </li>
+        </ul>
 
             <div class="lang-toggle">
                 <button class="lang-btn" hx-get="partials/over-ons-nl.html" hx-target="#page-wrapper" hx-swap="innerHTML" hx-push-url="?lang=nl">NL</button>
@@ -65,7 +70,6 @@
         <a href="onderwijs.html">Education</a>
         <a href="zorg-revalidatie.html">Care & Rehabilitation</a>
         <a href="over-ons.html">About Us</a>
-        <a href="prijzen.html">Prices</a>
         <a href="index.html#contact" onclick="closeMobileNav()">Contact</a>
     </div>
 
