--- a/partials/prijzen-nl.html
+++ b/partials/prijzen-nl.html
@@ -27,11 +27,16 @@
                     <button class="nav-link">Over Ons</button>
                     <div class="dropdown-menu">
                         <a href="over-ons.html">Over InterActiveMove</a>
-                        <a href="prijzen.html">Prijzen</a>
                         <a href="index.html#contact">Contact</a>
                     </div>
                 </li>
-            </ul>
+                        <li class="nav-item">
+                <a href="products/mobiele-vloer.html" class="nav-link">Verhuur</a>
+            </li>
+            <li class="nav-item">
+                <a href="prijzen.html" class="nav-link">Prijzen</a>
+            </li>
+        </ul>
 
             <div class="lang-toggle">
                 <button class="lang-btn active" hx-get="partials/prijzen-nl.html" hx-target="#page-wrapper" hx-swap="innerHTML" hx-push-url="?lang=nl">NL</button>
@@ -65,7 +70,6 @@
         <a href="onderwijs.html">Onderwijs</a>
         <a href="zorg-revalidatie.html">Zorg & Revalidatie</a>
         <a href="over-ons.html">Over Ons</a>
-        <a href="prijzen.html">Prijzen</a>
         <a href="index.html#contact" onclick="closeMobileNav()">Contact</a>
     </div>
 
