--- a/partials/over-ons-en.html
+++ b/partials/over-ons-en.html
@@ -1,43 +1,42 @@
 <header>
         <a href="index.html"><img src="media/logo-final.png" alt="InterActiveMove" class="logo-img"></a>
         <nav>
-            <ul class="nav-menu">
-                <li class="nav-item dropdown">
-                    <button class="nav-link">Products</button>
-                    <div class="dropdown-menu">
-                        <a href="products/interactieve-vloer.html">Interactive Floor</a>
-                        <a href="products/interactieve-muur.html">Interactive Wall</a>
-                        <a href="products/interactieve-zandbak.html">Interactive Sandbox</a>
-                        <a href="products/interactieve-klimwand.html">Interactive Climbing Wall</a>
-                        <a href="products/mobiele-vloer.html">Mobile Floor</a>
-                        <a href="products/software-maatwerk.html">Software & Customization</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <button class="nav-link">Applications</button>
-                    <div class="dropdown-menu">
-                        <a href="bouw-een-park.html">Build a Park</a>
-                        <a href="3d-spellen.html">3D Games</a>
-                        <a href="parken-speelhallen.html">Parks & Arcades</a>
-                        <a href="onderwijs.html">Education</a>
-                        <a href="zorg-revalidatie.html">Care & Rehabilitation</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <button class="nav-link">About Us</button>
-                    <div class="dropdown-menu">
-                        <a href="over-ons.html">About InterActiveMove</a>
-                        <a href="index.html#contact">Contact</a>
-                    </div>
-                </li>
-                        <li class="nav-item">
+                    <ul class="nav-menu">
+            <li class="nav-item dropdown">
+                <button class="nav-link">Products</button>
+                <div class="dropdown-menu">
+                    <a href="products/interactieve-vloer.html">Interactive Floor</a>
+                    <a href="products/interactieve-muur.html">Interactive Wall</a>
+                    <a href="products/interactieve-zandbak.html">Interactive Sandbox</a>
+                    <a href="products/interactieve-tekeningen.html">Interactive Drawings</a>
+                    <a href="products/mobiele-vloer.html">Mobile Floor</a>
+                    <a href="products/software-maatwerk.html">Software & Custom</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <button class="nav-link">Solutions</button>
+                <div class="dropdown-menu">
+                    <a href="bouw-een-park.html">Build a Park</a>
+                    <a href="3d-spellen.html">3D Games</a>
+                    <a href="parken-speelhallen.html">Parks & Arcades</a>
+                    <a href="onderwijs.html">Education</a>
+                    <a href="zorg-revalidatie.html">Healthcare & Rehab</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <button class="nav-link">About Us</button>
+                <div class="dropdown-menu">
+                    <a href="over-ons.html">About Inter Active Move</a>
+                    <a href="index.html#contact">Contact</a>
+                </div>
+            </li>
+            <li class="nav-item">
                 <a href="products/mobiele-vloer.html" class="nav-link">Rental</a>
             </li>
             <li class="nav-item">
                 <a href="prijzen.html" class="nav-link">Prices</a>
             </li>
         </ul>
-
             <div class="lang-toggle">
                 <button class="lang-btn" hx-get="partials/over-ons-nl.html" hx-target="#page-wrapper" hx-swap="innerHTML" hx-push-url="?lang=nl">NL</button>
                 <span class="divider">|</span>
