--- a/partials/over-ons-nl.html
+++ b/partials/over-ons-nl.html
@@ -1,43 +1,42 @@
 <header>
         <a href="index.html"><img src="media/logo-final.png" alt="InterActiveMove" class="logo-img"></a>
         <nav>
-            <ul class="nav-menu">
-                <li class="nav-item dropdown">
-                    <button class="nav-link">Producten</button>
-                    <div class="dropdown-menu">
-                        <a href="products/interactieve-vloer.html">Interactieve Vloer</a>
-                        <a href="products/interactieve-muur.html">Interactieve Muur</a>
-                        <a href="products/interactieve-zandbak.html">Interactieve Zandbak</a>
-                        <a href="products/interactieve-klimwand.html">Interactieve Klimwand</a>
-                        <a href="products/mobiele-vloer.html">Mobiele Vloer</a>
-                        <a href="products/software-maatwerk.html">Software & Maatwerk</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <button class="nav-link">Mogelijkheden</button>
-                    <div class="dropdown-menu">
-                        <a href="bouw-een-park.html">Bouw een Park</a>
-                        <a href="3d-spellen.html">3D Spellen</a>
-                        <a href="parken-speelhallen.html">Parken & Speelhallen</a>
-                        <a href="onderwijs.html">Onderwijs</a>
-                        <a href="zorg-revalidatie.html">Zorg & Revalidatie</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <button class="nav-link">Over Ons</button>
-                    <div class="dropdown-menu">
-                        <a href="over-ons.html">Over InterActiveMove</a>
-                        <a href="index.html#contact">Contact</a>
-                    </div>
-                </li>
-                        <li class="nav-item">
+                    <ul class="nav-menu">
+            <li class="nav-item dropdown">
+                <button class="nav-link">Producten</button>
+                <div class="dropdown-menu">
+                    <a href="products/interactieve-vloer.html">Interactieve Vloer</a>
+                    <a href="products/interactieve-muur.html">Interactieve Muur</a>
+                    <a href="products/interactieve-zandbak.html">Interactieve Zandbak</a>
+                    <a href="products/interactieve-tekeningen.html">Interactieve Tekeningen</a>
+                    <a href="products/mobiele-vloer.html">Mobiele Vloer</a>
+                    <a href="products/software-maatwerk.html">Software & Maatwerk</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <button class="nav-link">Mogelijkheden</button>
+                <div class="dropdown-menu">
+                    <a href="bouw-een-park.html">Bouw een Park</a>
+                    <a href="3d-spellen.html">3D Spellen</a>
+                    <a href="parken-speelhallen.html">Parken & Speelhallen</a>
+                    <a href="onderwijs.html">Onderwijs</a>
+                    <a href="zorg-revalidatie.html">Zorg & Revalidatie</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <button class="nav-link">Over Ons</button>
+                <div class="dropdown-menu">
+                    <a href="over-ons.html">Over Inter Active Move</a>
+                    <a href="index.html#contact">Contact</a>
+                </div>
+            </li>
+            <li class="nav-item">
                 <a href="products/mobiele-vloer.html" class="nav-link">Verhuur</a>
             </li>
             <li class="nav-item">
                 <a href="prijzen.html" class="nav-link">Prijzen</a>
             </li>
         </ul>
-
             <div class="lang-toggle">
                 <button class="lang-btn active" hx-get="partials/over-ons-nl.html" hx-target="#page-wrapper" hx-swap="innerHTML" hx-push-url="?lang=nl">NL</button>
                 <span class="divider">|</span>
