--- a/partials/index-en.html
+++ b/partials/index-en.html
@@ -2,7 +2,7 @@
     <img src="media/logo-final.png" alt="Inter Active Move" class="logo-img">
     <nav>
         <!-- Desktop Navigation -->
-        <ul class="nav-menu">
+                <ul class="nav-menu">
             <li class="nav-item dropdown">
                 <button class="nav-link">Products</button>
                 <div class="dropdown-menu">
@@ -11,24 +11,24 @@
                     <a href="products/interactieve-zandbak.html">Interactive Sandbox</a>
                     <a href="products/interactieve-tekeningen.html">Interactive Drawings</a>
                     <a href="products/mobiele-vloer.html">Mobile Floor</a>
-                    <a href="products/software-maatwerk.html">Software & Customization</a>
+                    <a href="products/software-maatwerk.html">Software & Custom</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <button class="nav-link">Applications</button>
+                <button class="nav-link">Solutions</button>
                 <div class="dropdown-menu">
                     <a href="bouw-een-park.html">Build a Park</a>
                     <a href="3d-spellen.html">3D Games</a>
                     <a href="parken-speelhallen.html">Parks & Arcades</a>
                     <a href="onderwijs.html">Education</a>
-                    <a href="zorg-revalidatie.html">Care & Rehabilitation</a>
+                    <a href="zorg-revalidatie.html">Healthcare & Rehab</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
                 <button class="nav-link">About Us</button>
                 <div class="dropdown-menu">
                     <a href="over-ons.html">About Inter Active Move</a>
-                    <a href="#contact">Contact</a>
+                    <a href="index.html#contact">Contact</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -38,7 +38,6 @@
                 <a href="prijzen.html" class="nav-link">Prices</a>
             </li>
         </ul>
-
         <div class="lang-toggle">
             <button class="lang-btn" hx-get="partials/index-nl.html" hx-target="#page-wrapper" hx-swap="innerHTML"
                 hx-push-url="?lang=nl">NL</button>
